src/coolcmp/unit_tests/Semantics/success/all-types-builtin.cl
class Main inherits Object {
    a: Int;
    b: String;
    c: Object;
    d: Bool;
    e: IO;

    main() : Object {
		true
	};
};
